# yet-ai

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  ide-artifacts.yml  ide-dogfood.yml
apps/engine/: Cargo.toml  README.md
apps/engine/src/: agent_progress.rs  chat.rs  chat_history.rs  demo_mode.rs  identity.rs  lib.rs  logging.rs  lsp.rs  main.rs  project_browser.rs  project_cli.rs  project_memory.rs  projects.rs  provider_auth.rs  provider_auth_callback.rs  secret_store.rs  security.rs  storage.rs
apps/engine/src/http/: mod.rs  project.rs
apps/engine/src/provider_auth/: mod.rs  refresh_guard.rs  session_registry.rs  session_store.rs  status.rs  types.rs  validation.rs
apps/engine/src/provider_auth/adapters/: mod.rs  openai_codex.rs
apps/engine/src/providers/: mod.rs
apps/engine/tests/: lsp.rs  runtime.rs
apps/gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/identity/: yet-ai-icon-derivatives.json
docs/: README.md
docs/architecture/: 000-reference-architecture-baseline.md  001-product-identity.md  002-product-differentiation-and-provenance.md  003-target-architecture.md  004-implementation-strategy.md  005-publication-hygiene.md  006-login-based-gpt-first-message.md  007-provider-auth-feasibility.md  008-reference-divergence-guardrails.md  009-runtime-lifecycle-roadmap.md  010-tool-authority-and-edit-pipeline-roadmap.md  011-sandbox-agent-prerequisites.md  012-coding-session-trace.md  013-agent-readiness-milestone.md  014-controlled-run-history.md  015-controlled-run-explicit-context.md  016-controlled-host-capabilities.md  017-controlled-agent-production-gap-audit.md  018-controlled-agent-authority-registry.md  019-controlled-agent-explicit-lexical-search.md  020-controlled-agent-search-informed-proposal.md  021-controlled-agent-multifile-patch-plan.md  022-controlled-agent-verification-bundles.md  023-controlled-agent-verification-followup.md  024-controlled-agent-two-step-run.md  025-controlled-agent-recovery-matrix.md  026-controlled-agent-task-presets.md  027-controlled-agent-task-level-beta-gate.md  028-useful-multifile-controlled-agent-decision.md  029-vscode-controlled-task-harness.md  030-controlled-agent-workflow-transcript.md  031-controlled-agent-storage-privacy-inventory.md  032-controlled-agent-verification-setup-hardening.md  033-packaged-vscode-controlled-task-smoke.md  034-experimental-codex-login-dogfood-audit.md  035-provider-oauth-architecture.md  036-browser-project-isolation.md
docs/dogfood/: agent-run-one-step.md  controlled-agent-real-provider-matrix.md  experimental-codex-login.md  manual-agent-run-rc.md  one-step-agent-run.md  real-coding-task.md  real-provider-active-file-chat.md  s88-useful-autonomy-matrix.md  s90-controlled-autonomy-readiness.md  s91-controlled-agent-dev-preview.md
fixtures/s88/: code-cleanup-target.ts  copy-change.md  failing-test.test.ts  recovery-copy.md  type-fix.ts
product/: identity.json  identity.schema.json
scripts/: audit-controlled-autonomy-wording.mjs  bounded-patch-loop-state.mjs  check-agent-progress.mjs  check-agent-readiness-docs.mjs  check-controlled-agent-authority-registry.mjs  check-controlled-agent-storage-privacy.mjs  check-controlled-agent-workflow-transcript-contract.mjs  check-forbidden-evidence-text.mjs  check-gui-asset-freshness.mjs  check-planner-scheduler.mjs  check-useful-multifile-agent-decision.mjs  check.mjs  combine-plugin-artifact-manifests.mjs  dogfood-agent-run-rc-report.mjs  dogfood-controlled-agent-real-provider-matrix.mjs  dogfood-controlled-agent-task-beta-report.mjs  dogfood-controlled-beta-report.mjs  dogfood-experimental-codex-login-report.mjs  dogfood-real-provider-report.mjs  gui-asset-freshness.mjs  ide-artifact-contract.mjs  ide-dogfood-report.mjs  ide-surface-contract.mjs  planner-agent-progress-report.mjs  planner-agent-progress-run.mjs  planner-agent-progress-state.mjs  planner-agent-progress.mjs  planner-scheduler-state.mjs  planner-scheduler-tick.mjs  prepare-ide-engine.mjs  prepare-jetbrains-preview.mjs  prepare-vscode-preview.mjs  report-github-ide-artifacts.mjs  sandbox-checkpoint-state.mjs  smoke-agent-progress-endpoint.mjs  smoke-agent-progress.mjs  smoke-agent-run-apply.mjs  smoke-agent-run-built-gui-fixtures.mjs  smoke-agent-run-checkpoint-decision.mjs  smoke-agent-run-checkpoint-readiness.mjs  (+129 more)
scripts/lib/: forbidden-evidence-text.mjs  (+4 more)
(+288 files in other folders)
