[workspace]
members = ["apps/engine"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures-util = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
