[workspace]
members = ["apps/engine"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.6", features = ["cors"] }
