[package]
name = "yet-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "yet-lsp"
path = "src/main.rs"

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
futures-util.workspace = true
getrandom.workspace = true
http.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
reqwest.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
