[package]
name = "yet-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["os-keychain"]
os-keychain = ["dep:keyring", "keyring/apple-native"]

[[bin]]
name = "yet-lsp"
path = "src/main.rs"

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
futures-util.workspace = true
fs2.workspace = true
getrandom.workspace = true
http.workspace = true
http-body-util.workspace = true
keyring = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
reqwest.workspace = true
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
